Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7299

Assertion `m_status == DA_ERROR || m_status == DA_OK' fails on concurrent execution of DDL, queries from I_S, and KILL QUERY

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0(EOL)
    • 10.0.16
    • OTHER
    • None

    Description

      sql/sql_error.h:705: const char* Diagnostics_area::message() const: Assertion `m_status == DA_ERROR || m_status == DA_OK' failed.
      141210  5:12:45 [ERROR] mysqld got signal 6 ;

      Stack trace of interesting threads from 10.0 revno 4539

      Thread 28 (Thread 0x7fa29d961700 (LWP 5263)):
      #0  0x00007fa29d5e778d in fsync () at ../sysdeps/unix/syscall-template.S:82
      #1  0x0000000000a8caf4 in os_file_fsync (file=62) at 10.0/storage/xtradb/os/os0file.cc:2410
      #2  0x0000000000a8cbe6 in os_file_flush_func (file=62) at 10.0/storage/xtradb/os/os0file.cc:2511
      #3  0x0000000000c35059 in pfs_os_file_flush_func (file=62, src_file=0x10a5ee8 "10.0/storage/xtradb/fil/fil0fil.cc", src_line=5809) at 10.0/storage/xtradb/incl
      ude/os0file.ic:355
      #4  0x0000000000c41dd9 in fil_flush (space_id=23) at 10.0/storage/xtradb/fil/fil0fil.cc:5809
      #5  0x0000000000c407d0 in fil_extend_space_to_desired_size (actual_size=0x7fa29d95b228, space_id=23, size_after_extend=8) at 10.0/storage/xtradb/fil/fil0fil.cc:5065
      #6  0x0000000000c48b72 in fsp_try_extend_data_file_with_pages (space=23, page_no=7, header=0x7fa292114026 "", mtr=0x7fa29d95b5c0) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:914
      #7  0x0000000000c4cbe6 in fsp_reserve_free_pages (space=23, space_header=0x7fa292114026 "", size=7, mtr=0x7fa29d95b5c0) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2712
      #8  0x0000000000c4cd17 in fsp_reserve_free_extents (n_reserved=0x7fa29d95b3a8, space=23, n_ext=2, alloc_type=1000000, mtr=0x7fa29d95b5c0) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2781
      #9  0x0000000000c4b4f1 in fseg_create_general (space=23, page=5, byte_offset=74, has_done_reservation=0, mtr=0x7fa29d95b5c0) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2079
      #10 0x0000000000c4b840 in fseg_create (space=23, page=5, byte_offset=74, mtr=0x7fa29d95b5c0) at 10.0/storage/xtradb/fsp/fsp0fsp.cc:2167
      #11 0x0000000000ba17a4 in btr_create (type=0, space=23, zip_size=0, index_id=121, index=0x7fa271fbc9f8, mtr=0x7fa29d95b5c0) at 10.0/storage/xtradb/btr/btr0btr.cc:1628
      #12 0x0000000000bfff52 in dict_create_index_tree_step (node=0x7fa271fbcc78) at 10.0/storage/xtradb/dict/dict0crea.cc:699
      #13 0x0000000000c00dc1 in dict_create_index_step (thr=0x7fa271fce380) at 10.0/storage/xtradb/dict/dict0crea.cc:1198
      #14 0x0000000000ac0708 in que_thr_step (thr=0x7fa271fce380) at 10.0/storage/xtradb/que/que0que.cc:1125
      #15 0x0000000000ac0886 in que_run_threads_low (thr=0x7fa271fce380) at 10.0/storage/xtradb/que/que0que.cc:1177
      #16 0x0000000000ac0a18 in que_run_threads (thr=0x7fa271fce380) at 10.0/storage/xtradb/que/que0que.cc:1218
      #17 0x0000000000b02cc5 in row_create_index_for_mysql (index=0x7fa271fbd8f8, trx=0x7fa271d5b878, field_lengths=0x7fa271fb1d70) at 10.0/storage/xtradb/row/row0mysql.cc:2536
      #18 0x0000000000a0f103 in create_index (trx=0x7fa271d5b878, form=0x7fa29d95d1c0, flags=1, table_name=0x7fa29d95bda0 "test/#sql-146b_6#P#p0", key_num=2) at 10.0/storage/xtradb/handler/ha_innodb.cc:9886
      #19 0x0000000000a10689 in ha_innobase::create (this=0x7fa271cd5888, name=0x7fa29d95c4e0 "./test/#sql-146b_6#P#p0", form=0x7fa29d95d1c0, create_info=0x7fa29d95f450) at 10.0/storage/xtradb/handler/ha_innodb.cc:10716
      #20 0x0000000000871a1c in handler::ha_create (this=0x7fa271cd5888, name=0x7fa29d95c4e0 "./test/#sql-146b_6#P#p0", form=0x7fa29d95d1c0, info=0x7fa29d95f450) at 10.0/sql/handler.cc:4277
      #21 0x0000000000e0c2d6 in ha_partition::create (this=0x7fa271cd5088, name=0x7fa29d95f05c "./test/#sql-146b_6", table_arg=0x7fa29d95d1c0, create_info=0x7fa29d95f450) at 10.0/sql/ha_partition.cc:734
      #22 0x0000000000871a1c in handler::ha_create (this=0x7fa271cd5088, name=0x7fa29d95f05c "./test/#sql-146b_6", form=0x7fa29d95d1c0, info=0x7fa29d95f450) at 10.0/sql/handler.cc:4277
      #23 0x00000000008728f9 in ha_create_table (thd=0x7fa282e20070, path=0x7fa29d95f05c "./test/#sql-146b_6", db=0x7fa271c6b770 "test", table_name=0x7fa29d95e7f0 "#sql-146b_6", create_info=0x7fa29d95f450, frm=0x7fa29d95f270) at 10.0/sql/handler.cc:4646
      #24 0x000000000073156e in mysql_alter_table (thd=0x7fa282e20070, new_db=0x7fa271c6b770 "test", new_name=0x0, create_info=0x7fa29d95f450, table_list=0x7fa271c6b198, alter_info=0x7fa29d95f3c0, order_num=0, order=0x0, ignore=false) at 10.0/sql/sql_table.cc:8858
      #25 0x0000000000799140 in Sql_cmd_alter_table::execute (this=0x7fa271c6b9c8, thd=0x7fa282e20070) at 10.0/sql/sql_alter.cc:312
      #26 0x0000000000682928 in mysql_execute_command (thd=0x7fa282e20070) at 10.0/sql/sql_parse.cc:5078
      #27 0x00000000006859bd in mysql_parse (thd=0x7fa282e20070, rawbuf=0x7fa271c6b088 "ALTER TABLE `C` PARTITION BY KEY() PARTITIONS 9", length=47, parser_state=0x7fa29d960660) at 10.0/sql/sql_parse.cc:6407
      #28 0x00000000006787b2 in dispatch_command (command=COM_QUERY, thd=0x7fa282e20070, packet=0x7fa282fb9071 "ALTER TABLE `C` PARTITION BY KEY() PARTITIONS 9", packet_length=47) at 10.0/sql/sql_parse.cc:1299
      #29 0x0000000000677b57 in do_command (thd=0x7fa282e20070) at 10.0/sql/sql_parse.cc:996

      Thread 22 (Thread 0x7fa29d886700 (LWP 5269)):
      #0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
      #1  0x0000000000e509f7 in safe_cond_timedwait (cond=0x7fa288a8d218, mp=0x7fa288a8d168, abstime=0x7fa29d882990, file=0xf488a0 "10.0/include/mysql/psi/mysql_thread.h", line=1202) at 10.0/mysys/thr_mutex.c:547
      #2  0x000000000079d295 in inline_mysql_cond_timedwait (that=0x7fa288a8d218, mutex=0x7fa288a8d168, abstime=0x7fa29d882990, src_file=0xf48af0 "10.0/sql/mdl.cc", src_line=1435) at 10.0/include/mysql/psi/mysql_thread.h:1202
      #3  0x000000000079e748 in MDL_wait::timed_wait (this=0x7fa288a8d168, owner=0x7fa288a8d120, abs_timeout=0x7fa29d882990, set_status_on_timeout=false, wait_state_name=0x16a7450) at 10.0/sql/mdl.cc:1435
      #4  0x000000000079fb16 in MDL_context::acquire_lock (this=0x7fa288a8d168, mdl_request=0x7fa29d883040, lock_wait_timeout=31536000) at 10.0/sql/mdl.cc:2375
      #5  0x00000000006fff44 in try_acquire_high_prio_shared_mdl_lock (thd=0x7fa288a8d070, table=0x7fa29d882c30, can_deadlock=false) at 10.0/sql/sql_show.cc:4478
      #6  0x0000000000700160 in fill_schema_table_from_frm (thd=0x7fa288a8d070, tables=0x7fa2728532b0, schema_table=0x169cb20, db_name=0x7fa2728c3740, table_name=0x7fa2729efe18, schema_table_idx=SCH_COLUMNS, open_tables_state_backup=0x7fa29d883ca0, can_deadlock=false) at 10.0/sql/sql_show.cc:4554
      #7  0x0000000000700e89 in get_all_tables (thd=0x7fa288a8d070, tables=0x7fa2728532b0, cond=0x0) at 10.0/sql/sql_show.cc:4914
      #8  0x000000000070e7e1 in get_schema_tables_result (join=0x7fa2728547a0, executed_place=PROCESSED_BY_JOIN_EXEC) at 10.0/sql/sql_show.cc:8159
      #9  0x00000000006b55ed in JOIN::exec_inner (this=0x7fa2728547a0) at 10.0/sql/sql_select.cc:2535
      #10 0x00000000006b4be4 in JOIN::exec (this=0x7fa2728547a0) at 10.0/sql/sql_select.cc:2370
      #11 0x00000000006b7f4f in mysql_select (thd=0x7fa288a8d070, rref_pointer_array=0x7fa288a916e0, tables=0x7fa2728532b0, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2684619520, result=0x7fa272854780, unit=0x7fa288a90d80, select_lex=0x7fa288a91468) at 10.0/sql/sql_select.cc:3308
      #12 0x00000000006ae549 in handle_select (thd=0x7fa288a8d070, lex=0x7fa288a90cb8, result=0x7fa272854780, setup_tables_done_option=0) at 10.0/sql/sql_select.cc:373
      #13 0x0000000000683244 in execute_sqlcom_select (thd=0x7fa288a8d070, all_tables=0x7fa2728532b0) at 10.0/sql/sql_parse.cc:5261
      #14 0x000000000067b542 in mysql_execute_command (thd=0x7fa288a8d070) at 10.0/sql/sql_parse.cc:2545
      #15 0x00000000006859bd in mysql_parse (thd=0x7fa288a8d070, rawbuf=0x7fa272853088 "SELECT * FROM INFORMATION_SCHEMA.COLUMNS", length=40, parser_state=0x7fa29d885660) at 10.0/sql/sql_parse.cc:6407
      #16 0x00000000006787b2 in dispatch_command (command=COM_QUERY, thd=0x7fa288a8d070, packet=0x7fa288a93071 "SELECT * FROM INFORMATION_SCHEMA.COLUMNS", packet_length=40) at 10.0/sql/sql_parse.cc:1299
      #17 0x0000000000677b57 in do_command (thd=0x7fa288a8d070) at 10.0/sql/sql_parse.cc:996
      #18 0x0000000000794877 in do_handle_one_connection (thd_arg=0x7fa288a8d070) at 10.0/sql/sql_connect.cc:1375
      #19 0x00000000007945ca in handle_one_connection (arg=0x7fa288a8d070) at 10.0/sql/sql_connect.cc:1289
      #20 0x00007fa29d5dfb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #21 0x00007fa29b89620d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      #0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
      #1  0x0000000000a92214 in os_cond_wait (cond=0x7fa289b5f340, fast_mutex=0x7fa289b5f300) at 10.0/storage/xtradb/os/os0sync.cc:214
      #2  0x0000000000a92746 in os_event_wait_low (event=0x7fa289b5f300, reset_sig_count=32) at 10.0/storage/xtradb/os/os0sync.cc:610
      #3  0x0000000000b55bb9 in sync_array_wait_event (arr=0x7fa29aca3540, index=0) at 10.0/storage/xtradb/sync/sync0arr.cc:461
      #4  0x0000000000b5afc9 in mutex_spin_wait (_mutex=0x7fa29ad1a5b8, high_priority=false, file_name=0x105b190 "10.0/storage/xtradb/include/dict0boot.ic", line=36) at 10.0/storage/xtradb/sync/sync0sync.cc:690
      #5  0x0000000000adf209 in mutex_enter_func (mutex=0x7fa29ad1a5b8, file_name=0x105b190 "10.0/storage/xtradb/include/dict0boot.ic", line=36, priority=IB_DEFAULT_PRIO) at 10.0/storage/xtradb/include/sync0sync.ic:316
      #6  0x0000000000adf36e in pfs_mutex_enter_func (mutex=0x7fa29ad1a5b8, file_name=0x105b190 "10.0/storage/xtradb/include/dict0boot.ic", line=36, priority=IB_DEFAULT_PRIO) at 10.0/storage/xtradb/include/sync0sync.ic:400
      #7  0x0000000000ae1979 in dict_sys_get_new_row_id () at 10.0/storage/xtradb/include/dict0boot.ic:36
      #8  0x0000000000ae9d94 in row_ins_alloc_row_id_step (node=0x7fa27ec75710) at 10.0/storage/xtradb/row/row0ins.cc:3109
      #9  0x0000000000ae9efd in row_ins (node=0x7fa27ec75710, thr=0x7fa27ec75a48) at 10.0/storage/xtradb/row/row0ins.cc:3193
      #10 0x0000000000aea323 in row_ins_step (thr=0x7fa27ec75a48) at 10.0/storage/xtradb/row/row0ins.cc:3339
      #11 0x0000000000b00b9e in row_insert_for_mysql (mysql_rec=0x7fa27ec77b88 "", prebuilt=0x7fa27ec75078) at 10.0/storage/xtradb/row/row0mysql.cc:1368
      #12 0x0000000000a0a8b0 in ha_innobase::write_row (this=0x7fa27ed3f088, record=0x7fa27ec77b88 "") at 10.0/storage/xtradb/handler/ha_innodb.cc:7587
      #13 0x0000000000875429 in handler::ha_write_row (this=0x7fa27ed3f088, buf=0x7fa27ec77b88 "") at 10.0/sql/handler.cc:5953
      #14 0x000000000065ff3d in write_record (thd=0x7fa282fe6070, table=0x7fa27eda3c70, info=0x7fa27ec710c8) at 10.0/sql/sql_insert.cc:1845
      #15 0x0000000000664954 in select_insert::send_data (this=0x7fa27ec71090, values=...) at 10.0/sql/sql_insert.cc:3603
      #16 0x00000000006dd240 in end_send (join=0x7fa27ec71170, join_tab=0x7fa27ec88598, end_of_records=false) at 10.0/sql/sql_select.cc:18825
      #17 0x00000000006db02b in evaluate_join_record (join=0x7fa27ec71170, join_tab=0x7fa27ec88270, error=0) at 10.0/sql/sql_select.cc:17933
      #18 0x00000000006daab6 in sub_select (join=0x7fa27ec71170, join_tab=0x7fa27ec88270, end_of_records=false) at 10.0/sql/sql_select.cc:17750
      #19 0x00000000006da189 in do_select (join=0x7fa27ec71170, fields=0x7fa282fea580, table=0x0, procedure=0x0) at 10.0/sql/sql_select.cc:17373
      #20 0x00000000006b76ba in JOIN::exec_inner (this=0x7fa27ec71170) at 10.0/sql/sql_select.cc:3080
      #21 0x00000000006b4be4 in JOIN::exec (this=0x7fa27ec71170) at 10.0/sql/sql_select.cc:2370
      #22 0x00000000006b7f4f in mysql_select (thd=0x7fa282fe6070, rref_pointer_array=0x7fa282fea6e0, tables=0x7fa27ec708e0, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2416184064, result=0x7fa27ec71090, unit=0x7fa282fe9d80, select_lex=0x7fa282fea468) at 10.0/sql/sql_select.cc:3308
      #23 0x00000000006ae549 in handle_select (thd=0x7fa282fe6070, lex=0x7fa282fe9cb8, result=0x7fa27ec71090, setup_tables_done_option=0) at 10.0/sql/sql_select.cc:373
      #24 0x000000000067c5c9 in mysql_execute_command (thd=0x7fa282fe6070) at 10.0/sql/sql_parse.cc:2997
      #25 0x00000000006859bd in mysql_parse (thd=0x7fa282fe6070, rawbuf=0x7fa27ec70088 "CREATE TABLE IF NOT EXISTS `tmp` AS SELECT * FROM `CC`", length=54, parser_state=0x7fa29d917660) at 10.0/sql/sql_parse.cc:6407
      #26 0x00000000006787b2 in dispatch_command (command=COM_QUERY, thd=0x7fa282fe6070, packet=0x7fa282fec071 "CREATE TABLE IF NOT EXISTS `tmp` AS SELECT * FROM `CC`", packet_length=54) at 10.0/sql/sql_parse.cc:1299
      #27 0x0000000000677b57 in do_command (thd=0x7fa282fe6070) at 10.0/sql/sql_parse.cc:996
      #28 0x0000000000794877 in do_handle_one_connection (thd_arg=0x7fa282fe6070) at 10.0/sql/sql_connect.cc:1375
      #29 0x00000000007945ca in handle_one_connection (arg=0x7fa282fe6070) at 10.0/sql/sql_connect.cc:1289
      #30 0x00007fa29d5dfb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #31 0x00007fa29b89620d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
      #32 0x0000000000000000 in ?? ()

      Thread 1 (Thread 0x7fa29d8cf700 (LWP 5267)):
      #0  __pthread_kill (threadid=<optimized out>, signo=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/pthread_kill.c:63
      #1  0x0000000000e4b4c7 in my_write_core (sig=6) at 10.0/mysys/stacktrace.c:457
      #2  0x0000000000868201 in handle_fatal_signal (sig=6) at 10.0/sql/signal_handler.cc:262
      #3  <signal handler called>
      #4  0x00007fa29b7ec545 in *__GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #5  0x00007fa29b7ef7c0 in *__GI_abort () at abort.c:92
      #6  0x00007fa29b7e56f1 in *__GI___assert_fail (assertion=0xedf8e0 "m_status == DA_ERROR || m_status == DA_OK", file=<optimized out>, line=705, function=0xee10a0 "const char* Diagnostics_area::message() const") at assert.c:81
      #7  0x00000000005d5ef5 in Diagnostics_area::message (this=0x7fa282ff60d8) at 10.0/sql/sql_error.h:705
      #8  0x00000000007027db in get_schema_tables_record (thd=0x7fa282ff1070, tables=0x7fa27be78af8, table=0x7fa27bf94088, res=true, db_name=0x7fa27bcbe9a8, table_name=0x7fa27bfe1a98) at 10.0/sql/sql_show.cc:5290
      #9  0x00000000006ffa1e in fill_schema_table_by_open (thd=0x7fa282ff1070, is_show_fields_or_keys=false, table=0x7fa27bf94088, schema_table=0x169d1a0, orig_db_name=0x7fa27bcbe9a8, orig_table_name=0x7fa27bfe1a98, open_tables_state_backup=0x7fa29d8ccca0, can_deadlock=false) at 10.0/sql/sql_show.cc:4296
      #10 0x0000000000700f04 in get_all_tables (thd=0x7fa282ff1070, tables=0x7fa27bc5a2a8, cond=0x0) at 10.0/sql/sql_show.cc:4919
      #11 0x000000000070e7e1 in get_schema_tables_result (join=0x7fa27bc5b868, executed_place=PROCESSED_BY_JOIN_EXEC) at 10.0/sql/sql_show.cc:8159
      #12 0x00000000006b55ed in JOIN::exec_inner (this=0x7fa27bc5b868) at 10.0/sql/sql_select.cc:2535
      #13 0x00000000006b4be4 in JOIN::exec (this=0x7fa27bc5b868) at 10.0/sql/sql_select.cc:2370
      #14 0x00000000006b7f4f in mysql_select (thd=0x7fa282ff1070, rref_pointer_array=0x7fa282ff56e0, tables=0x7fa27bc5a2a8, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2684619520, result=0x7fa27bc5b848, unit=0x7fa282ff4d80, select_lex=0x7fa282ff5468) at 10.0/sql/sql_select.cc:3308
      #15 0x00000000006ae549 in handle_select (thd=0x7fa282ff1070, lex=0x7fa282ff4cb8, result=0x7fa27bc5b848, setup_tables_done_option=0) at 10.0/sql/sql_select.cc:373
      #16 0x0000000000683244 in execute_sqlcom_select (thd=0x7fa282ff1070, all_tables=0x7fa27bc5a2a8) at 10.0/sql/sql_parse.cc:5261
      #17 0x000000000067b542 in mysql_execute_command (thd=0x7fa282ff1070) at 10.0/sql/sql_parse.cc:2545
      #18 0x00000000006859bd in mysql_parse (thd=0x7fa282ff1070, rawbuf=0x7fa27bc5a088 "SELECT * FROM INFORMATION_SCHEMA.TABLES", length=39, parser_state=0x7fa29d8ce660) at 10.0/sql/sql_parse.cc:6407
      #19 0x00000000006787b2 in dispatch_command (command=COM_QUERY, thd=0x7fa282ff1070, packet=0x7fa288a88071 "SELECT * FROM INFORMATION_SCHEMA.TABLES", packet_length=39) at 10.0/sql/sql_parse.cc:1299
      #20 0x0000000000677b57 in do_command (thd=0x7fa282ff1070) at 10.0/sql/sql_parse.cc:996
      #21 0x0000000000794877 in do_handle_one_connection (thd_arg=0x7fa282ff1070) at 10.0/sql/sql_connect.cc:1375
      #22 0x00000000007945ca in handle_one_connection (arg=0x7fa282ff1070) at 10.0/sql/sql_connect.cc:1289
      #23 0x00007fa29d5dfb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #24 0x00007fa29b89620d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      RQG command line:

      perl ./runall-new.pl --threads=4 --duration=1200 --queries=100M --reporters=QueryTimeout --querytimeout=5 --grammar=1.yy --basedir=<basedir> --vardir=<vardir>

      grammar 1.yy

      thread1:
      	ALTER TABLE _table PARTITION BY KEY() PARTITIONS _digit |
      	ALTER TABLE _table REMOVE PARTITIONING ;
       
      thread2:
      	CREATE TABLE IF NOT EXISTS `tmp` AS SELECT * FROM _table |
      	DROP TABLE IF EXISTS tmp ;
       
      thread3:
      	SELECT * FROM INFORMATION_SCHEMA.TABLES;
       
      thread4:
      	SELECT * FROM INFORMATION_SCHEMA.COLUMNS;

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.